# Nook

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nook-landing/: SETUP.md  drizzle.config.ts  package-lock.json  package.json  proxy.ts
nook-landing/app/: globals.css  layout.tsx  llm.txt  page.tsx  robots.ts  sitemap.ts
nook-landing/app/about/: page.tsx
nook-landing/app/api/webhook/: route.ts
nook-landing/app/db/: index.ts  schema.ts
nook-landing/app/db/migrations/: 0000_wet_gauntlet.sql  0001_remarkable_kat_farrell.sql
nook-landing/app/download/: page.tsx
nook-landing/app/pricing/: page.tsx
nook-landing/app/privacy/: page.tsx
nook-landing/app/return/: page.tsx
nook-landing/app/terms/: page.tsx
nook-landing/components/: DemoVideo.tsx  Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
nook-landing/lib/: constants.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  utils.rs
src-tauri/src/filesystem/: analysis.rs  mod.rs  models.rs  scanner.rs  utils.rs
src-tauri/src/license/: mod.rs
src/components/: FolderSizeChart.tsx  Hedgehog.tsx  LargestFiles.tsx  Layout.tsx  Paywall.tsx  Sidebar.tsx  StorageBreakdown.tsx  Treemap.tsx  TrialStatus.tsx
src/contexts/: LicenseContext.tsx
src/hooks/: useScanProgress.ts  useTrial.ts
src/lib/: constants.ts
src/pages/: Cleaner.tsx  Dashboard.tsx  Scanner.tsx  Settings.tsx
src/types/: index.ts
src/utils/: format.ts
(+11 files in other folders)
