[package]
name = "nook"
version = "0.1.0"
description = "A lightweight desktop utility for macOS that helps users quickly see what is taking up space on their computer and clean it easily"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-start-dragging", "path-all", "window-close", "window-unmaximize", "window-maximize", "window-minimize", "shell-open", "fs-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1"
walkdir = "2.3"
sysinfo = "0.29"
dirs = "5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
